Removing the red bar of doom

--- a/html/card_builder.html
+++ b/html/card_builder.html
@@ -377,8 +377,8 @@ $(document).ready(function() {
 </head>
 <body style='padding:0px;margin:0px;overflow:hidden;'>
 
-<div id='notification' style='position:absolute;width:100%;padding:5px;color:#ffff43;background: #a90329; background: -moz-linear-gradient(top, #a90329 0%, #8f0222 44%, #6d0019 100%); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a90329), color-stop(44%,#8f0222), color-stop(100%,#6d0019)); background: -webkit-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); background: -o-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); background: -ms-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); background: linear-gradient(to bottom, #a90329 0%,#8f0222 44%,#6d0019 100%);'>On or around 20 Aug, 2013, this site will cease to exist. If you are so inclined, you can host it yourself.</div>
-<div id="main" style="position:fixed;top:40px;bottom:10px;width:700px;margin-left:-350px;left:50%;overflow:hidden">
+<!--<div id='notification' style='position:absolute;width:100%;padding:5px;color:#ffff43;background: #a90329; background: -moz-linear-gradient(top, #a90329 0%, #8f0222 44%, #6d0019 100%); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a90329), color-stop(44%,#8f0222), color-stop(100%,#6d0019)); background: -webkit-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); background: -o-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); background: -ms-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); background: linear-gradient(to bottom, #a90329 0%,#8f0222 44%,#6d0019 100%);'>On or around 20 Aug, 2013, this site will cease to exist. If you are so inclined, you can host it yourself.</div>-->
+<div id="main" style="position:fixed;top:10px;bottom:10px;width:700px;margin-left:-350px;left:50%;overflow:hidden">
 	<div id="left" style="width:300px;margin-left:auto;margin-right:auto;float:left">
 		<img width="160px" height="220px" id="large_img"></img>
 		<img width="80px" height="110px" id="small_img"></img>
